chore: Fork project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button id="pause-btn" disabled>Pause</button>
           <button id="resume-btn" disabled>Resume</button>
           <button id="stop-btn" disabled>Stop</button>
-          <span><a href="https://github.com/chuanqisun/semidown" target="_blank">Code and Documentation</a></span>
+          <span><a href="https://github.com/prantlf/semidown" target="_blank">Code and Documentation</a></span>
         </div>
         <div class="status">Status: <span id="status">Ready</span></div>
       </header>
